Initial setup for EasyInfoDrop

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,10 +2,8 @@ name: CI/CD Pipeline for EasyInfoDrop
 
 on:
   push:
-    branches:
-      - main
-    tags:
-      - 'v*'
+    branches: [ main ]
+    tags: [ 'v*' ]
 
 permissions:
   contents: write
@@ -14,34 +12,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: |
+      - uses: actions/checkout@v4
+      - run: |
           sudo apt-get update
           sudo apt-get install -y qtbase5-dev qt5-qmake libqt5widgets5 libx11-dev cmake build-essential
-
-      - name: Configure CMake
-        run: |
+      - run: |
           mkdir build
           cd build
           cmake ..
-
-      - name: Build
-        run: |
+      - run: |
           cd build
           make
-
-      - name: Upload executable artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: EasyInfoDrop
           path: build/EasyInfoDrop
           if-no-files-found: error
-
-      - name: Upload config artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: config
           path: config/config.json
@@ -52,29 +39,18 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download executable artifact
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
         with:
           name: EasyInfoDrop
           path: release
-
-      - name: Download config artifact
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           name: config
           path: release
-
-      - name: Set executable permissions
-        run: chmod +x release/EasyInfoDrop
-
-      - name: Create tarball
-        run: tar -czvf release/EasyInfoDrop-${{ github.ref_name }}-linux.tar.gz -C release EasyInfoDrop config.json
-
-      - name: Create Release
-        id: create_release
+      - run: chmod +x release/EasyInfoDrop
+      - run: tar -czvf release/EasyInfoDrop-${{ github.ref_name }}-linux.tar.gz -C release EasyInfoDrop config.json
+      - id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -83,9 +59,7 @@ jobs:
           release_name: Release ${{ github.ref_name }}
           draft: true
           prerelease: true
-
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+      - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
