--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,22 @@
-cmake_minimum_required(VERSION 3.10)
-project(EasyFormDrop)
+cmake_minimum_required(VERSION 3.16)
+project(EasyInfoDrop LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# Enable automatic moc for Qt
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-cmake_policy(SET CMP0135 NEW)
-set(CMAKE_POLICY_DEFAULT_CMP0135 NEW)
-
-# Find Qt5
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 if(NOT Qt5_FOUND)
-    message(FATAL_ERROR "Qt5 Widgets not found. Please install qtbase5-dev (Ubuntu) or equivalent.")
+    message(FATAL_ERROR "Qt5 Widgets not found. Install qtbase5-dev.")
 endif()
 
-# Find X11
 find_package(X11 REQUIRED)
 if(NOT X11_FOUND)
-    message(FATAL_ERROR "X11 not found. Please install libx11-dev (Ubuntu).")
+    message(FATAL_ERROR "X11 not found. Install libx11-dev.")
 endif()
 
-# Fetch nlohmann/json
 include(FetchContent)
 FetchContent_Declare(
     json
@@ -33,12 +25,8 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(json)
 
-# Add executable
-add_executable(EasyFormDrop src/main.cpp)
+add_executable(EasyInfoDrop src/main.cpp)
+target_include_directories(EasyInfoDrop PRIVATE ${CMAKE_SOURCE_DIR}/src ${X11_INCLUDE_DIR})
+target_link_libraries(EasyInfoDrop PRIVATE Qt5::Widgets ${X11_LIBRARIES} nlohmann_json::nlohmann_json)
 
-# Link libraries
-target_link_libraries(EasyFormDrop PRIVATE Qt5::Widgets ${X11_LIBRARIES} nlohmann_json::nlohmann_json)
-target_include_directories(EasyFormDrop PRIVATE ${X11_INCLUDE_DIR} ${Qt5Widgets_INCLUDE_DIRS})
-
-# Copy config file
 configure_file(config/config.json config/config.json COPYONLY)
