--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,9 @@ jobs:
         run: |
           cd build
           make
+      - name: Debug build output
+        run: |
+          ls -l build/EasyInfoDrop
       - uses: actions/upload-artifact@v4
         with:
           name: EasyInfoDrop
@@ -42,24 +45,24 @@ jobs:
         with:
           name: EasyInfoDrop
           path: release
+      - name: Debug file structure
+        run: |
+          ls -R release
+          echo "Checking downloaded artifact:"
+          find release -type f
       - name: Create tarball
         run: |
           chmod +x release/EasyInfoDrop
           tar -czvf release/release-easy-info-drop-${{ github.ref_name }}.tar.gz -C release EasyInfoDrop
-      - id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          echo "Tarball contents:"
+          tar -tzvf release/release-easy-info-drop-${{ github.ref_name }}.tar.gz
+      - name: Create and upload release
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
           draft: true
           prerelease: true
-      - uses: actions/upload-release-asset@v1
+          files: release/release-easy-info-drop-${{ github.ref_name }}.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: release/release-easy-info-drop-${{ github.ref_name }}.tar.gz
-          asset_name: release-easy-info-drop-${{ github.ref_name }}.tar.gz
-          asset_content_type: application/gzip
