--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,14 @@ set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 if(NOT Qt5_FOUND)
-    message(FATAL_ERROR "Qt5 Widgets not found. Install qtbase5-dev.")
+    message(FATAL_ERROR "Qt5 Widgets not found. Install qtbase5-dev or qt@5.")
 endif()
 
-find_package(X11 REQUIRED)
-if(NOT X11_FOUND)
-    message(FATAL_ERROR "X11 not found. Install libx11-dev.")
+if(NOT APPLE)
+    find_package(X11 REQUIRED)
+    if(NOT X11_FOUND)
+        message(FATAL_ERROR "X11 not found. Install libx11-dev.")
+    endif()
 endif()
 
 include(FetchContent)
@@ -26,5 +28,9 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(json)
 
 add_executable(EasyInfoDrop src/main.cpp)
-target_include_directories(EasyInfoDrop PRIVATE ${CMAKE_SOURCE_DIR}/src ${X11_INCLUDE_DIR})
-target_link_libraries(EasyInfoDrop PRIVATE Qt5::Widgets ${X11_LIBRARIES} nlohmann_json::nlohmann_json)
+target_include_directories(EasyInfoDrop PRIVATE ${CMAKE_SOURCE_DIR}/src)
+if(NOT APPLE)
+    target_include_directories(EasyInfoDrop PRIVATE ${X11_INCLUDE_DIR})
+    target_link_libraries(EasyInfoDrop PRIVATE ${X11_LIBRARIES})
+endif()
+target_link_libraries(EasyInfoDrop PRIVATE Qt5::Widgets nlohmann_json::nlohmann_json)
