--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,7 +59,7 @@ jobs:
           ditto -c -k --sequesterRsrc --keepParent EasyInfoDrop.app EasyInfoDrop-${{ github.ref_name }}-macOS.zip
       - name: Debug build output
         run: |
-          ls -l build/EasyInfoDrop.app
+          ls -lR build/EasyInfoDrop.app
           ls -l build/EasyInfoDrop-${{ github.ref_name }}-macOS.zip
       - uses: actions/upload-artifact@v4
         with:
