--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -67,8 +67,49 @@ jobs:
           path: build/EasyInfoDrop-${{ github.ref_name }}-macOS.zip
           if-no-files-found: error
 
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v4
+        with:
+          version: '5.15.2'
+          host: 'windows'
+          target: 'desktop'
+          arch: 'win64_msvc2019_64'
+      - name: Install CMake
+        uses: lukka/get-cmake@v3.29.3
+      - name: Configure build
+        run: |
+          mkdir build
+          cd build
+          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS="/EHsc" ..
+        shell: cmd
+      - name: Build
+        run: |
+          cd build
+          cmake --build . --config Release
+        shell: cmd
+      - name: Bundle application
+        run: |
+          cd build
+          %Qt5_DIR%\bin\windeployqt Release\EasyInfoDrop.exe
+          powershell -Command "Compress-Archive -Path Release\EasyInfoDrop.exe,Release\*.dll -DestinationPath EasyInfoDrop-${{ github.ref_name }}-Windows.zip"
+        shell: cmd
+      - name: Debug build output
+        run: |
+          dir build\Release
+          dir build\EasyInfoDrop-${{ github.ref_name }}-Windows.zip
+        shell: cmd
+      - uses: actions/upload-artifact@v4
+        with:
+          name: EasyInfoDrop-Windows
+          path: build/EasyInfoDrop-${{ github.ref_name }}-Windows.zip
+          if-no-files-found: error
+
   release:
-    needs: [build-ubuntu, build-macos]
+    needs: [build-ubuntu, build-macos, build-windows]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -81,6 +122,10 @@ jobs:
         with:
           name: EasyInfoDrop-macOS
           path: release/macos
+      - uses: actions/download-artifact@v4
+        with:
+          name: EasyInfoDrop-Windows
+          path: release/windows
       - name: Debug file structure
         run: |
           ls -R release
@@ -102,6 +147,7 @@ jobs:
           files: |
             release/release-easy-info-drop-${{ github.ref_name }}-ubuntu.tar.gz
             release/macos/EasyInfoDrop-${{ github.ref_name }}-macOS.zip
+            release/windows/EasyInfoDrop-${{ github.ref_name }}-Windows.zip
           body: |
             EasyInfoDrop Release ${{ github.ref_name }}
 
@@ -118,7 +164,13 @@ jobs:
             open EasyInfoDrop.app
             ```
 
-            **Note**: Drag-to-paste functionality is disabled on macOS due to platform limitations. Use click-to-copy instead.
+            **Windows**:
+            ```powershell
+            Expand-Archive -Path EasyInfoDrop-${{ github.ref_name }}-Windows.zip -DestinationPath .
+            .\EasyInfoDrop.exe
+            ```
+
+            **Note**: Drag-to-paste functionality is disabled on macOS and Windows due to platform limitations. Use click-to-copy instead.
 
             Includes `config/config.json` for immediate use.
         env:
