Fix Windows build by excluding X11 dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ if(NOT Qt5_FOUND)
     message(FATAL_ERROR "Qt5 Widgets not found. Install qtbase5-dev or qt@5.")
 endif()
 
-if(NOT APPLE)
+if(UNIX AND NOT APPLE)
     find_package(X11 REQUIRED)
     if(NOT X11_FOUND)
         message(FATAL_ERROR "X11 not found. Install libx11-dev.")
@@ -38,7 +38,7 @@ else()
 endif()
 
 target_include_directories(EasyInfoDrop PRIVATE ${CMAKE_SOURCE_DIR}/src)
-if(NOT APPLE)
+if(UNIX AND NOT APPLE)
     target_include_directories(EasyInfoDrop PRIVATE ${X11_INCLUDE_DIR})
     target_link_libraries(EasyInfoDrop PRIVATE ${X11_LIBRARIES})
 endif()
